[package]
name = "wasm-orderbook"
version = "0.1.0"
authors = ["Fluence Labs"]
description = "The greeting module for the Fluence network"
repository = "https://github.com/fluencelabs/marine/tree/master/examples/greeting"
edition = "2018"
publish = false

[[bin]]
name = "orderbook"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.6.14"
orderbook = {path = "./utils/orderbook-rs/"}

[dev-dependencies]
marine-rs-sdk-test = "0.4.1"


