[package]
name = "web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.17.0", default-features = false, features = [
    "wasm",
    "http",
] }
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
marine-rs-sdk = "0.6.15"
futures = "*"
hex = "*"

[dev-dependencies]
marine-rs-sdk-test = "*"
